Added forked dependency

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "dependencies/utest"]
 	path = dependencies/utest
 	url = https://github.com/sheredom/utest.h.git
+[submodule "dependencies/glslang"]
+	path = dependencies/glslang
+	url = https://github.com/JJ-Karambasis/glslang.git
